parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BRACE
    BREAK
    COLCH
    COLON
    CONCAT
    DIF
    DOT
    DUALCOLON
    EXPO
    FALSE
    GTEQUALS
    LTEQUALS
    NIL
    PERCENTUAL
    RBRACE
    RCOLCH
    REPEAT
    SEMICOLON
    TAG
    TRUE
    UNTIL
    VARARGS

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     program -> empty
Rule 3     statements -> statement statements
Rule 4     statements -> statement
Rule 5     statement -> FUNCTION NAME LPAREN parameters RPAREN statements END
Rule 6     statement -> WHILE expression DO statements END
Rule 7     statement -> FOR NAME ATRIB expression COMMA expression DO statements END
Rule 8     statement -> FOR NAME ATRIB expression COMMA expression COMMA expression DO statements END
Rule 9     statement -> FOR namelist IN explist DO statements END
Rule 10    namelist -> NAME COMMA namelist
Rule 11    namelist -> NAME
Rule 12    explist -> expression COMMA explist
Rule 13    explist -> expression
Rule 14    statement -> IF expression THEN statements END
Rule 15    statement -> IF expression THEN statements ELSE statements END
Rule 16    elseif_list -> elseif_list ELSEIF expression THEN statements
Rule 17    elseif_list -> empty
Rule 18    empty -> <empty>
Rule 19    statement -> LOCAL NAME ATRIB expression
Rule 20    statement -> NAME ATRIB expression
Rule 21    statement -> PRINT LPAREN expression RPAREN
Rule 22    statement -> RETURN expression
Rule 23    statement -> function_call
Rule 24    parameters -> NAME COMMA parameters
Rule 25    parameters -> NAME
Rule 26    parameters -> <empty>
Rule 27    arguments -> expression COMMA arguments
Rule 28    arguments -> expression
Rule 29    arguments -> <empty>
Rule 30    expression -> MINUS expression
Rule 31    expression -> NOT expression
Rule 32    expression -> expression PLUS expression
Rule 33    expression -> expression MINUS expression
Rule 34    expression -> expression TIMES expression
Rule 35    expression -> expression DIVIDE expression
Rule 36    expression -> expression EQUALS expression
Rule 37    expression -> expression LT expression
Rule 38    expression -> expression GT expression
Rule 39    expression -> expression AND expression
Rule 40    expression -> expression OR expression
Rule 41    expression -> function_call
Rule 42    function_call -> NAME LPAREN arguments RPAREN
Rule 43    expression -> NUMBER
Rule 44    expression -> STRING
Rule 45    expression -> NAME

Terminals, with rules where they appear

AND                  : 39
ATRIB                : 7 8 19 20
BRACE                : 
BREAK                : 
COLCH                : 
COLON                : 
COMMA                : 7 8 8 10 12 24 27
CONCAT               : 
DIF                  : 
DIVIDE               : 35
DO                   : 6 7 8 9
DOT                  : 
DUALCOLON            : 
ELSE                 : 15
ELSEIF               : 16
END                  : 5 6 7 8 9 14 15
EQUALS               : 36
EXPO                 : 
FALSE                : 
FOR                  : 7 8 9
FUNCTION             : 5
GT                   : 38
GTEQUALS             : 
IF                   : 14 15
IN                   : 9
LOCAL                : 19
LPAREN               : 5 21 42
LT                   : 37
LTEQUALS             : 
MINUS                : 30 33
NAME                 : 5 7 8 10 11 19 20 24 25 42 45
NIL                  : 
NOT                  : 31
NUMBER               : 43
OR                   : 40
PERCENTUAL           : 
PLUS                 : 32
PRINT                : 21
RBRACE               : 
RCOLCH               : 
REPEAT               : 
RETURN               : 22
RPAREN               : 5 21 42
SEMICOLON            : 
STRING               : 44
TAG                  : 
THEN                 : 14 15 16
TIMES                : 34
TRUE                 : 
UNTIL                : 
VARARGS              : 
WHILE                : 6
error                : 

Nonterminals, with rules where they appear

arguments            : 27 42
elseif_list          : 16
empty                : 2 17
explist              : 9 12
expression           : 6 7 7 8 8 8 12 13 14 15 16 19 20 21 22 27 28 30 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40
function_call        : 23 41
namelist             : 9 10
parameters           : 5 24
program              : 0
statement            : 3 4
statements           : 1 3 5 6 7 8 9 14 15 15 16

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) program -> . empty
    (3) statements -> . statement statements
    (4) statements -> . statement
    (18) empty -> .
    (5) statement -> . FUNCTION NAME LPAREN parameters RPAREN statements END
    (6) statement -> . WHILE expression DO statements END
    (7) statement -> . FOR NAME ATRIB expression COMMA expression DO statements END
    (8) statement -> . FOR NAME ATRIB expression COMMA expression COMMA expression DO statements END
    (9) statement -> . FOR namelist IN explist DO statements END
    (14) statement -> . IF expression THEN statements END
    (15) statement -> . IF expression THEN statements ELSE statements END
    (19) statement -> . LOCAL NAME ATRIB expression
    (20) statement -> . NAME ATRIB expression
    (21) statement -> . PRINT LPAREN expression RPAREN
    (22) statement -> . RETURN expression
    (23) statement -> . function_call
    (42) function_call -> . NAME LPAREN arguments RPAREN

    $end            reduce using rule 18 (empty -> .)
    FUNCTION        shift and go to state 5
    WHILE           shift and go to state 7
    FOR             shift and go to state 8
    IF              shift and go to state 9
    LOCAL           shift and go to state 10
    NAME            shift and go to state 6
    PRINT           shift and go to state 11
    RETURN          shift and go to state 12

    program                        shift and go to state 1
    statements                     shift and go to state 2
    empty                          shift and go to state 3
    statement                      shift and go to state 4
    function_call                  shift and go to state 13

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .

    $end            reduce using rule 1 (program -> statements .)


state 3

    (2) program -> empty .

    $end            reduce using rule 2 (program -> empty .)


state 4

    (3) statements -> statement . statements
    (4) statements -> statement .
    (3) statements -> . statement statements
    (4) statements -> . statement
    (5) statement -> . FUNCTION NAME LPAREN parameters RPAREN statements END
    (6) statement -> . WHILE expression DO statements END
    (7) statement -> . FOR NAME ATRIB expression COMMA expression DO statements END
    (8) statement -> . FOR NAME ATRIB expression COMMA expression COMMA expression DO statements END
    (9) statement -> . FOR namelist IN explist DO statements END
    (14) statement -> . IF expression THEN statements END
    (15) statement -> . IF expression THEN statements ELSE statements END
    (19) statement -> . LOCAL NAME ATRIB expression
    (20) statement -> . NAME ATRIB expression
    (21) statement -> . PRINT LPAREN expression RPAREN
    (22) statement -> . RETURN expression
    (23) statement -> . function_call
    (42) function_call -> . NAME LPAREN arguments RPAREN

    $end            reduce using rule 4 (statements -> statement .)
    END             reduce using rule 4 (statements -> statement .)
    ELSE            reduce using rule 4 (statements -> statement .)
    FUNCTION        shift and go to state 5
    WHILE           shift and go to state 7
    FOR             shift and go to state 8
    IF              shift and go to state 9
    LOCAL           shift and go to state 10
    NAME            shift and go to state 6
    PRINT           shift and go to state 11
    RETURN          shift and go to state 12

    statement                      shift and go to state 4
    statements                     shift and go to state 14
    function_call                  shift and go to state 13

state 5

    (5) statement -> FUNCTION . NAME LPAREN parameters RPAREN statements END

    NAME            shift and go to state 15


state 6

    (20) statement -> NAME . ATRIB expression
    (42) function_call -> NAME . LPAREN arguments RPAREN

    ATRIB           shift and go to state 16
    LPAREN          shift and go to state 17


state 7

    (6) statement -> WHILE . expression DO statements END
    (30) expression -> . MINUS expression
    (31) expression -> . NOT expression
    (32) expression -> . expression PLUS expression
    (33) expression -> . expression MINUS expression
    (34) expression -> . expression TIMES expression
    (35) expression -> . expression DIVIDE expression
    (36) expression -> . expression EQUALS expression
    (37) expression -> . expression LT expression
    (38) expression -> . expression GT expression
    (39) expression -> . expression AND expression
    (40) expression -> . expression OR expression
    (41) expression -> . function_call
    (43) expression -> . NUMBER
    (44) expression -> . STRING
    (45) expression -> . NAME
    (42) function_call -> . NAME LPAREN arguments RPAREN

    MINUS           shift and go to state 19
    NOT             shift and go to state 20
    NUMBER          shift and go to state 22
    STRING          shift and go to state 23
    NAME            shift and go to state 24

    expression                     shift and go to state 18
    function_call                  shift and go to state 21

state 8

    (7) statement -> FOR . NAME ATRIB expression COMMA expression DO statements END
    (8) statement -> FOR . NAME ATRIB expression COMMA expression COMMA expression DO statements END
    (9) statement -> FOR . namelist IN explist DO statements END
    (10) namelist -> . NAME COMMA namelist
    (11) namelist -> . NAME

    NAME            shift and go to state 25

    namelist                       shift and go to state 26

state 9

    (14) statement -> IF . expression THEN statements END
    (15) statement -> IF . expression THEN statements ELSE statements END
    (30) expression -> . MINUS expression
    (31) expression -> . NOT expression
    (32) expression -> . expression PLUS expression
    (33) expression -> . expression MINUS expression
    (34) expression -> . expression TIMES expression
    (35) expression -> . expression DIVIDE expression
    (36) expression -> . expression EQUALS expression
    (37) expression -> . expression LT expression
    (38) expression -> . expression GT expression
    (39) expression -> . expression AND expression
    (40) expression -> . expression OR expression
    (41) expression -> . function_call
    (43) expression -> . NUMBER
    (44) expression -> . STRING
    (45) expression -> . NAME
    (42) function_call -> . NAME LPAREN arguments RPAREN

    MINUS           shift and go to state 19
    NOT             shift and go to state 20
    NUMBER          shift and go to state 22
    STRING          shift and go to state 23
    NAME            shift and go to state 24

    expression                     shift and go to state 27
    function_call                  shift and go to state 21

state 10

    (19) statement -> LOCAL . NAME ATRIB expression

    NAME            shift and go to state 28


state 11

    (21) statement -> PRINT . LPAREN expression RPAREN

    LPAREN          shift and go to state 29


state 12

    (22) statement -> RETURN . expression
    (30) expression -> . MINUS expression
    (31) expression -> . NOT expression
    (32) expression -> . expression PLUS expression
    (33) expression -> . expression MINUS expression
    (34) expression -> . expression TIMES expression
    (35) expression -> . expression DIVIDE expression
    (36) expression -> . expression EQUALS expression
    (37) expression -> . expression LT expression
    (38) expression -> . expression GT expression
    (39) expression -> . expression AND expression
    (40) expression -> . expression OR expression
    (41) expression -> . function_call
    (43) expression -> . NUMBER
    (44) expression -> . STRING
    (45) expression -> . NAME
    (42) function_call -> . NAME LPAREN arguments RPAREN

    MINUS           shift and go to state 19
    NOT             shift and go to state 20
    NUMBER          shift and go to state 22
    STRING          shift and go to state 23
    NAME            shift and go to state 24

    expression                     shift and go to state 30
    function_call                  shift and go to state 21

state 13

    (23) statement -> function_call .

    FUNCTION        reduce using rule 23 (statement -> function_call .)
    WHILE           reduce using rule 23 (statement -> function_call .)
    FOR             reduce using rule 23 (statement -> function_call .)
    IF              reduce using rule 23 (statement -> function_call .)
    LOCAL           reduce using rule 23 (statement -> function_call .)
    NAME            reduce using rule 23 (statement -> function_call .)
    PRINT           reduce using rule 23 (statement -> function_call .)
    RETURN          reduce using rule 23 (statement -> function_call .)
    $end            reduce using rule 23 (statement -> function_call .)
    END             reduce using rule 23 (statement -> function_call .)
    ELSE            reduce using rule 23 (statement -> function_call .)


state 14

    (3) statements -> statement statements .

    $end            reduce using rule 3 (statements -> statement statements .)
    END             reduce using rule 3 (statements -> statement statements .)
    ELSE            reduce using rule 3 (statements -> statement statements .)


state 15

    (5) statement -> FUNCTION NAME . LPAREN parameters RPAREN statements END

    LPAREN          shift and go to state 31


state 16

    (20) statement -> NAME ATRIB . expression
    (30) expression -> . MINUS expression
    (31) expression -> . NOT expression
    (32) expression -> . expression PLUS expression
    (33) expression -> . expression MINUS expression
    (34) expression -> . expression TIMES expression
    (35) expression -> . expression DIVIDE expression
    (36) expression -> . expression EQUALS expression
    (37) expression -> . expression LT expression
    (38) expression -> . expression GT expression
    (39) expression -> . expression AND expression
    (40) expression -> . expression OR expression
    (41) expression -> . function_call
    (43) expression -> . NUMBER
    (44) expression -> . STRING
    (45) expression -> . NAME
    (42) function_call -> . NAME LPAREN arguments RPAREN

    MINUS           shift and go to state 19
    NOT             shift and go to state 20
    NUMBER          shift and go to state 22
    STRING          shift and go to state 23
    NAME            shift and go to state 24

    expression                     shift and go to state 32
    function_call                  shift and go to state 21

state 17

    (42) function_call -> NAME LPAREN . arguments RPAREN
    (27) arguments -> . expression COMMA arguments
    (28) arguments -> . expression
    (29) arguments -> .
    (30) expression -> . MINUS expression
    (31) expression -> . NOT expression
    (32) expression -> . expression PLUS expression
    (33) expression -> . expression MINUS expression
    (34) expression -> . expression TIMES expression
    (35) expression -> . expression DIVIDE expression
    (36) expression -> . expression EQUALS expression
    (37) expression -> . expression LT expression
    (38) expression -> . expression GT expression
    (39) expression -> . expression AND expression
    (40) expression -> . expression OR expression
    (41) expression -> . function_call
    (43) expression -> . NUMBER
    (44) expression -> . STRING
    (45) expression -> . NAME
    (42) function_call -> . NAME LPAREN arguments RPAREN

    RPAREN          reduce using rule 29 (arguments -> .)
    MINUS           shift and go to state 19
    NOT             shift and go to state 20
    NUMBER          shift and go to state 22
    STRING          shift and go to state 23
    NAME            shift and go to state 24

    arguments                      shift and go to state 33
    expression                     shift and go to state 34
    function_call                  shift and go to state 21

state 18

    (6) statement -> WHILE expression . DO statements END
    (32) expression -> expression . PLUS expression
    (33) expression -> expression . MINUS expression
    (34) expression -> expression . TIMES expression
    (35) expression -> expression . DIVIDE expression
    (36) expression -> expression . EQUALS expression
    (37) expression -> expression . LT expression
    (38) expression -> expression . GT expression
    (39) expression -> expression . AND expression
    (40) expression -> expression . OR expression

    DO              shift and go to state 35
    PLUS            shift and go to state 36
    MINUS           shift and go to state 37
    TIMES           shift and go to state 38
    DIVIDE          shift and go to state 39
    EQUALS          shift and go to state 40
    LT              shift and go to state 41
    GT              shift and go to state 42
    AND             shift and go to state 43
    OR              shift and go to state 44


state 19

    (30) expression -> MINUS . expression
    (30) expression -> . MINUS expression
    (31) expression -> . NOT expression
    (32) expression -> . expression PLUS expression
    (33) expression -> . expression MINUS expression
    (34) expression -> . expression TIMES expression
    (35) expression -> . expression DIVIDE expression
    (36) expression -> . expression EQUALS expression
    (37) expression -> . expression LT expression
    (38) expression -> . expression GT expression
    (39) expression -> . expression AND expression
    (40) expression -> . expression OR expression
    (41) expression -> . function_call
    (43) expression -> . NUMBER
    (44) expression -> . STRING
    (45) expression -> . NAME
    (42) function_call -> . NAME LPAREN arguments RPAREN

    MINUS           shift and go to state 19
    NOT             shift and go to state 20
    NUMBER          shift and go to state 22
    STRING          shift and go to state 23
    NAME            shift and go to state 24

    expression                     shift and go to state 45
    function_call                  shift and go to state 21

state 20

    (31) expression -> NOT . expression
    (30) expression -> . MINUS expression
    (31) expression -> . NOT expression
    (32) expression -> . expression PLUS expression
    (33) expression -> . expression MINUS expression
    (34) expression -> . expression TIMES expression
    (35) expression -> . expression DIVIDE expression
    (36) expression -> . expression EQUALS expression
    (37) expression -> . expression LT expression
    (38) expression -> . expression GT expression
    (39) expression -> . expression AND expression
    (40) expression -> . expression OR expression
    (41) expression -> . function_call
    (43) expression -> . NUMBER
    (44) expression -> . STRING
    (45) expression -> . NAME
    (42) function_call -> . NAME LPAREN arguments RPAREN

    MINUS           shift and go to state 19
    NOT             shift and go to state 20
    NUMBER          shift and go to state 22
    STRING          shift and go to state 23
    NAME            shift and go to state 24

    expression                     shift and go to state 46
    function_call                  shift and go to state 21

state 21

    (41) expression -> function_call .

    DO              reduce using rule 41 (expression -> function_call .)
    PLUS            reduce using rule 41 (expression -> function_call .)
    MINUS           reduce using rule 41 (expression -> function_call .)
    TIMES           reduce using rule 41 (expression -> function_call .)
    DIVIDE          reduce using rule 41 (expression -> function_call .)
    EQUALS          reduce using rule 41 (expression -> function_call .)
    LT              reduce using rule 41 (expression -> function_call .)
    GT              reduce using rule 41 (expression -> function_call .)
    AND             reduce using rule 41 (expression -> function_call .)
    OR              reduce using rule 41 (expression -> function_call .)
    THEN            reduce using rule 41 (expression -> function_call .)
    FUNCTION        reduce using rule 41 (expression -> function_call .)
    WHILE           reduce using rule 41 (expression -> function_call .)
    FOR             reduce using rule 41 (expression -> function_call .)
    IF              reduce using rule 41 (expression -> function_call .)
    LOCAL           reduce using rule 41 (expression -> function_call .)
    NAME            reduce using rule 41 (expression -> function_call .)
    PRINT           reduce using rule 41 (expression -> function_call .)
    RETURN          reduce using rule 41 (expression -> function_call .)
    $end            reduce using rule 41 (expression -> function_call .)
    END             reduce using rule 41 (expression -> function_call .)
    ELSE            reduce using rule 41 (expression -> function_call .)
    COMMA           reduce using rule 41 (expression -> function_call .)
    RPAREN          reduce using rule 41 (expression -> function_call .)


state 22

    (43) expression -> NUMBER .

    DO              reduce using rule 43 (expression -> NUMBER .)
    PLUS            reduce using rule 43 (expression -> NUMBER .)
    MINUS           reduce using rule 43 (expression -> NUMBER .)
    TIMES           reduce using rule 43 (expression -> NUMBER .)
    DIVIDE          reduce using rule 43 (expression -> NUMBER .)
    EQUALS          reduce using rule 43 (expression -> NUMBER .)
    LT              reduce using rule 43 (expression -> NUMBER .)
    GT              reduce using rule 43 (expression -> NUMBER .)
    AND             reduce using rule 43 (expression -> NUMBER .)
    OR              reduce using rule 43 (expression -> NUMBER .)
    THEN            reduce using rule 43 (expression -> NUMBER .)
    FUNCTION        reduce using rule 43 (expression -> NUMBER .)
    WHILE           reduce using rule 43 (expression -> NUMBER .)
    FOR             reduce using rule 43 (expression -> NUMBER .)
    IF              reduce using rule 43 (expression -> NUMBER .)
    LOCAL           reduce using rule 43 (expression -> NUMBER .)
    NAME            reduce using rule 43 (expression -> NUMBER .)
    PRINT           reduce using rule 43 (expression -> NUMBER .)
    RETURN          reduce using rule 43 (expression -> NUMBER .)
    $end            reduce using rule 43 (expression -> NUMBER .)
    END             reduce using rule 43 (expression -> NUMBER .)
    ELSE            reduce using rule 43 (expression -> NUMBER .)
    COMMA           reduce using rule 43 (expression -> NUMBER .)
    RPAREN          reduce using rule 43 (expression -> NUMBER .)


state 23

    (44) expression -> STRING .

    DO              reduce using rule 44 (expression -> STRING .)
    PLUS            reduce using rule 44 (expression -> STRING .)
    MINUS           reduce using rule 44 (expression -> STRING .)
    TIMES           reduce using rule 44 (expression -> STRING .)
    DIVIDE          reduce using rule 44 (expression -> STRING .)
    EQUALS          reduce using rule 44 (expression -> STRING .)
    LT              reduce using rule 44 (expression -> STRING .)
    GT              reduce using rule 44 (expression -> STRING .)
    AND             reduce using rule 44 (expression -> STRING .)
    OR              reduce using rule 44 (expression -> STRING .)
    THEN            reduce using rule 44 (expression -> STRING .)
    FUNCTION        reduce using rule 44 (expression -> STRING .)
    WHILE           reduce using rule 44 (expression -> STRING .)
    FOR             reduce using rule 44 (expression -> STRING .)
    IF              reduce using rule 44 (expression -> STRING .)
    LOCAL           reduce using rule 44 (expression -> STRING .)
    NAME            reduce using rule 44 (expression -> STRING .)
    PRINT           reduce using rule 44 (expression -> STRING .)
    RETURN          reduce using rule 44 (expression -> STRING .)
    $end            reduce using rule 44 (expression -> STRING .)
    END             reduce using rule 44 (expression -> STRING .)
    ELSE            reduce using rule 44 (expression -> STRING .)
    COMMA           reduce using rule 44 (expression -> STRING .)
    RPAREN          reduce using rule 44 (expression -> STRING .)


state 24

    (45) expression -> NAME .
    (42) function_call -> NAME . LPAREN arguments RPAREN

    DO              reduce using rule 45 (expression -> NAME .)
    PLUS            reduce using rule 45 (expression -> NAME .)
    MINUS           reduce using rule 45 (expression -> NAME .)
    TIMES           reduce using rule 45 (expression -> NAME .)
    DIVIDE          reduce using rule 45 (expression -> NAME .)
    EQUALS          reduce using rule 45 (expression -> NAME .)
    LT              reduce using rule 45 (expression -> NAME .)
    GT              reduce using rule 45 (expression -> NAME .)
    AND             reduce using rule 45 (expression -> NAME .)
    OR              reduce using rule 45 (expression -> NAME .)
    THEN            reduce using rule 45 (expression -> NAME .)
    FUNCTION        reduce using rule 45 (expression -> NAME .)
    WHILE           reduce using rule 45 (expression -> NAME .)
    FOR             reduce using rule 45 (expression -> NAME .)
    IF              reduce using rule 45 (expression -> NAME .)
    LOCAL           reduce using rule 45 (expression -> NAME .)
    NAME            reduce using rule 45 (expression -> NAME .)
    PRINT           reduce using rule 45 (expression -> NAME .)
    RETURN          reduce using rule 45 (expression -> NAME .)
    $end            reduce using rule 45 (expression -> NAME .)
    END             reduce using rule 45 (expression -> NAME .)
    ELSE            reduce using rule 45 (expression -> NAME .)
    COMMA           reduce using rule 45 (expression -> NAME .)
    RPAREN          reduce using rule 45 (expression -> NAME .)
    LPAREN          shift and go to state 17


state 25

    (7) statement -> FOR NAME . ATRIB expression COMMA expression DO statements END
    (8) statement -> FOR NAME . ATRIB expression COMMA expression COMMA expression DO statements END
    (10) namelist -> NAME . COMMA namelist
    (11) namelist -> NAME .

    ATRIB           shift and go to state 47
    COMMA           shift and go to state 48
    IN              reduce using rule 11 (namelist -> NAME .)


state 26

    (9) statement -> FOR namelist . IN explist DO statements END

    IN              shift and go to state 49


state 27

    (14) statement -> IF expression . THEN statements END
    (15) statement -> IF expression . THEN statements ELSE statements END
    (32) expression -> expression . PLUS expression
    (33) expression -> expression . MINUS expression
    (34) expression -> expression . TIMES expression
    (35) expression -> expression . DIVIDE expression
    (36) expression -> expression . EQUALS expression
    (37) expression -> expression . LT expression
    (38) expression -> expression . GT expression
    (39) expression -> expression . AND expression
    (40) expression -> expression . OR expression

    THEN            shift and go to state 50
    PLUS            shift and go to state 36
    MINUS           shift and go to state 37
    TIMES           shift and go to state 38
    DIVIDE          shift and go to state 39
    EQUALS          shift and go to state 40
    LT              shift and go to state 41
    GT              shift and go to state 42
    AND             shift and go to state 43
    OR              shift and go to state 44


state 28

    (19) statement -> LOCAL NAME . ATRIB expression

    ATRIB           shift and go to state 51


state 29

    (21) statement -> PRINT LPAREN . expression RPAREN
    (30) expression -> . MINUS expression
    (31) expression -> . NOT expression
    (32) expression -> . expression PLUS expression
    (33) expression -> . expression MINUS expression
    (34) expression -> . expression TIMES expression
    (35) expression -> . expression DIVIDE expression
    (36) expression -> . expression EQUALS expression
    (37) expression -> . expression LT expression
    (38) expression -> . expression GT expression
    (39) expression -> . expression AND expression
    (40) expression -> . expression OR expression
    (41) expression -> . function_call
    (43) expression -> . NUMBER
    (44) expression -> . STRING
    (45) expression -> . NAME
    (42) function_call -> . NAME LPAREN arguments RPAREN

    MINUS           shift and go to state 19
    NOT             shift and go to state 20
    NUMBER          shift and go to state 22
    STRING          shift and go to state 23
    NAME            shift and go to state 24

    expression                     shift and go to state 52
    function_call                  shift and go to state 21

state 30

    (22) statement -> RETURN expression .
    (32) expression -> expression . PLUS expression
    (33) expression -> expression . MINUS expression
    (34) expression -> expression . TIMES expression
    (35) expression -> expression . DIVIDE expression
    (36) expression -> expression . EQUALS expression
    (37) expression -> expression . LT expression
    (38) expression -> expression . GT expression
    (39) expression -> expression . AND expression
    (40) expression -> expression . OR expression

    FUNCTION        reduce using rule 22 (statement -> RETURN expression .)
    WHILE           reduce using rule 22 (statement -> RETURN expression .)
    FOR             reduce using rule 22 (statement -> RETURN expression .)
    IF              reduce using rule 22 (statement -> RETURN expression .)
    LOCAL           reduce using rule 22 (statement -> RETURN expression .)
    NAME            reduce using rule 22 (statement -> RETURN expression .)
    PRINT           reduce using rule 22 (statement -> RETURN expression .)
    RETURN          reduce using rule 22 (statement -> RETURN expression .)
    $end            reduce using rule 22 (statement -> RETURN expression .)
    END             reduce using rule 22 (statement -> RETURN expression .)
    ELSE            reduce using rule 22 (statement -> RETURN expression .)
    PLUS            shift and go to state 36
    MINUS           shift and go to state 37
    TIMES           shift and go to state 38
    DIVIDE          shift and go to state 39
    EQUALS          shift and go to state 40
    LT              shift and go to state 41
    GT              shift and go to state 42
    AND             shift and go to state 43
    OR              shift and go to state 44


state 31

    (5) statement -> FUNCTION NAME LPAREN . parameters RPAREN statements END
    (24) parameters -> . NAME COMMA parameters
    (25) parameters -> . NAME
    (26) parameters -> .

    NAME            shift and go to state 53
    RPAREN          reduce using rule 26 (parameters -> .)

    parameters                     shift and go to state 54

state 32
